[package]
name = "tweet-like"
version = "0.1.0"
authors = ["saidgeek <me@saidgeek.land>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.19"
egg-mode = "0.15"
serde = { version = "1.0.123", features = ["derive"] }
serde_yaml = "0.8"
tokio = "0.2"
regex = "1"

[dependencies.rustbreak]
version = "2"
features = ["ron_enc"]
